docs/0.18.2/_sources/api/gammapy.modeling.Parameters.rst.txt
Parameters
==========

.. currentmodule:: gammapy.modeling

.. autoclass:: Parameters
   :show-inheritance:

   .. rubric:: Attributes Summary

   .. autosummary::

      ~Parameters.free_parameters
      ~Parameters.names
      ~Parameters.restore_values
      ~Parameters.types
      ~Parameters.unique_parameters
      ~Parameters.values

   .. rubric:: Methods Summary

   .. autosummary::

      ~Parameters.autoscale
      ~Parameters.check_limits
      ~Parameters.copy
      ~Parameters.count
      ~Parameters.freeze_all
      ~Parameters.from_dict
      ~Parameters.from_stack
      ~Parameters.index
      ~Parameters.set_parameter_factors
      ~Parameters.to_dict
      ~Parameters.to_table

   .. rubric:: Attributes Documentation

   .. autoattribute:: free_parameters
   .. autoattribute:: names
   .. autoattribute:: restore_values
   .. autoattribute:: types
   .. autoattribute:: unique_parameters
   .. autoattribute:: values

   .. rubric:: Methods Documentation

   .. automethod:: autoscale
   .. automethod:: check_limits
   .. automethod:: copy
   .. automethod:: count
   .. automethod:: freeze_all
   .. automethod:: from_dict
   .. automethod:: from_stack
   .. automethod:: index
   .. automethod:: set_parameter_factors
   .. automethod:: to_dict
   .. automethod:: to_table
